smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-missing-newline.smithy
// Parse error at line 5, column 17 near `use`: Expected a line break | Model
$version: "2.0"
namespace smithy.example

use com.foo#Bar use com.foo#Baz
